--- a/main.yml
+++ b/main.yml
@@ -691,6 +691,9 @@
     - role: terminal-notifier
       tags: [command-line-tools, brew-pkg, terminal-notifier]
 
+    - role: warp
+      tags: [command-line-tools, brew-cask-pkg, warp]
+
     #############################################################################
     # Miscellaneous #############################################################
     #############################################################################
