--- a/main.yml
+++ b/main.yml
@@ -692,7 +692,7 @@
       tags: [command-line-tools, brew-pkg, terminal-notifier]
     
     - role: warp
-      tags: [command-line-tools, brew-cask-pkg, warp]
+      tags: [command-line-tools, brew-cask-pkg, warp].
 
     #############################################################################
     # Miscellaneous #############################################################
